--- a/templates/app/school_list.html
+++ b/templates/app/school_list.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <centre>
-        <h1>List of the school Objects</h1>
+{% extends 'app/dummy.html' %}
+
+{% block title %}
+    <title>SchoolList</title>
+{% endblock %}
+
+{% block body_block %}
+    <center>
+        <h1>List OF School Objects</h1>
 
         {% for school in schools %}
             <a href="{{school.pk}}"><h2>{{school.sname}}</h2></a>
         {% endfor %}
-    </centre>
-</body>
-</html>
+    </center>
+{% endblock %}
